# kalk

./: CMakeLists.txt  README.md  Raz.cpp  Raz.h  main.cpp  numero.cpp  numero.h  test_callback.cpp  test_parsing.cpp
BUILDING_FOLDER/: BUILDING_FOLDER  BUILDING_FOLDER.pro  Makefile  c++_build  c++_build.pro  moc_KalkButton.cpp  moc_KalkExceptionAlert.cpp  moc_controller.cpp  moc_controller_view.cpp
BUILDING_FOLDER/Controller/: controller.cpp  controller.h
BUILDING_FOLDER/Model/: C_cartesiano.cpp  C_polare.h  Circuit_Hierarchy.h  Complesso.cpp  Componente.cpp  Condensatore.cpp  Database_Hierarchy.cpp  Database_Hierarchy.h  Dato.h  Hierarchy_Handler.cpp  Hierarchy_Handler.h  Induttore.cpp  Numerical_Hierarchy.cpp  Numerical_Hierarchy.h  Numero.cpp  Numero.h  Raz.cpp  Raz.h  Resistore.cpp  exception.h  parser.h  tupla.cpp
BUILDING_FOLDER/View/: controller_view.cpp  controller_view.h
BUILDING_FOLDER/View/items/: KalkExceptionAlert.cpp  KalkExceptionAlert.h  KalkHelpWindow.h
BUILDING_FOLDER/View/specialized_view_hierarchy/: VRazionale.cpp  VTupla.h  specialized_view.cpp  specialized_view.h
BUILDING_FOLDER/View/startup/: startup_view.cpp  startup_view.h
Back-end/: C_cartesiano.cpp  C_cartesiano.h  C_polare.cpp  C_polare.h  Circuito.cpp  Circuito.h  Complesso.h  Componente.cpp  Componente.h  Condensatore.cpp  Condensatore.h  Dato.h  Induttanza.cpp  Induttanza.h  Induttore.cpp  Induttore.h  Macro.cpp  Macro.h  Melodia.h  Nota.cpp  Numero.cpp  Numero.h  Raz.cpp  Raz.h  Resistore.cpp  Resistore.h  a.out  main.cpp  parser.cpp  parser.h
Controller/: controller.cpp  controller.h  filesize.cpp  ideas_controller.txt  session_buffer.h
Java/: CCartesiano.java  CPolare.java  Complesso.java  Componente.java  Condensatore.java  Dato.java  Induttore.java  KalkException.java  Numero.java  Raz.java  Resistore.java  Tupla.java  Use.java
KALK/: .nfs0000000001989fa400000091  KALK  KALK.pro  Makefile  main.cpp  moc_KalkHelpWindow.cpp  moc_KalkPlainTextEdit.cpp  moc_specialized_view.cpp  moc_startup_view.cpp
KALK/Controller/: controller.cpp  controller.h
KALK/Model/: C_cartesiano.cpp  C_polare.cpp  Circuit_Hierarchy.cpp  Complesso.h  Componente.h  Condensatore.cpp  Database_Hierarchy.cpp  Dato.h  Induttore.cpp  Induttore.h  Numerical_Hierarchy.cpp  Numerical_Hierarchy.h  Raz.cpp  Resistore.cpp  Resistore.h  exception.h  parser.h  tupla.cpp
KALK/View/: controller_view.cpp  controller_view.h
KALK/View/items/: KalkButton.h  KalkExceptionAlert.cpp  KalkExceptionAlert.h  KalkHelpWindow.cpp  KalkPlainTextEdit.h
KALK/View/specialized_view_hierarchy/: VCircuito.cpp  VComplesso.cpp  VRazionale.cpp  VTupla.cpp  numerical_insert.cpp  specialized_view.cpp  specialized_view.h
KALK/View/startup/: startup_view.cpp
Model/: C_cartesiano.cpp  C_cartesiano.h  C_polare.cpp  C_polare.h  Circuit_Hierarchy.cpp  Circuit_Hierarchy.h  Circuito.cpp  Circuito.h  Complesso.cpp  Complesso.h  Complex_hierarchy.h  Componente.cpp  Componente.h  Condensatore.cpp  Condensatore.h  Database_Hierarchy.cpp  Database_Hierarchy.h  Hierarchy_Handler.cpp  Hierarchy_Handler.h  Induttore.cpp  Induttore.h  Melodia.cpp  Melodia.h  Nota.cpp  Nota.h  Numerical_Hierarchy.cpp  Numerical_Hierarchy.h  Numero.cpp  Numero.h  Raz.cpp  Raz.h  Resistore.cpp  Resistore.h  exception.h  kalk  kalk_model  main.cpp  makefile  model.dia  model_uml.dia  (+4 more)
Model Branch/: .depend  C_cartesiano.cpp  C_cartesiano.h  C_polare.cpp  C_polare.h  Circuit_Hierarchy.cpp  Circuit_Hierarchy.h  Circuito.cpp  Circuito.h  Complesso.cpp  Complesso.h  Componente.cpp  Componente.h  Condensatore.cpp  Condensatore.h  Database_Hierarchy.cpp  Database_Hierarchy.h  Dato.h  Hierarchy_Handler.cpp  Hierarchy_Handler.h  Induttore.cpp  Induttore.h  Makefile  Numerical_Hierarchy.cpp  Numerical_Hierarchy.h  Numero.cpp  Numero.h  Raz.cpp  Raz.h  Resistore.cpp  Resistore.h  exception.h  kalk_model  main.cpp  makefile  parser.h  tupla.cpp  tupla.h
Relazione/: relazioneluca.odt  relazionenick.odt
Relazioni/: relazioneluca.odt  relazionenick.odt
View/: Makefile  View  View.pro  controller_view.cpp  controller_view.h  ideas_view.txt  main.cpp  moc_KalkHelpWindow.cpp  moc_KalkPlainTextEdit.cpp  moc_controller_view.cpp  moc_specialized_view.cpp  moc_startup_view.cpp  selectTypeButton.h  startup_view.cpp  startup_view.h  view_manager.cpp  view_manager.h
View/Controller/: controller.h
View/View/specialized view hierarchy/: VComplex.h  VNota.h  (+1 more)
View/build-test-Desktop_Qt_5_9_0_clang_64bit-Debug/: Makefile
View/items/: KalkButton.h  KalkHelpWindow.cpp  KalkHelpWindow.h  KalkPlainTextEdit.cpp  KalkPlainTextEdit.h
View/specialized_view_hierarchy/: VCircuito.cpp  VCircuito.h  VRazionale.cpp  VTupla.cpp  numerical_insert.h  specialized_view.cpp  specialized_view.h
View/startup/: startup_view.h
View/test/: Makefile  main.cpp  startup.cpp  startup.h  test  test.pro
View/test1/: Makefile  startup.cpp  startup.h  test1  test1.pro
Vista/: main.cpp
Vista/View/: Makefile  View  View.pro  controller_view.cpp  controller_view.h  main.cpp  moc_KalkButton.cpp  moc_KalkPlainTextEdit.cpp  moc_controller_view.cpp  moc_specialized_view.cpp  moc_startup_view.cpp  startup_view.cpp  startup_view.h
c++/Model/: C_cartesiano.cpp  C_cartesiano.h  C_polare.cpp  C_polare.h  Circuit_Hierarchy.cpp  Circuit_Hierarchy.h  Componente.cpp  Condensatore.h  Database_Hierarchy.cpp  Dato.h  Induttore.cpp  Induttore.h  Numerical_Hierarchy.cpp  Numero.h  Raz.cpp  exception.h  kalk_model  main.cpp  parser.h
c++/View/: main.cpp
da rivedere/: Dato.h  parser.cpp  parser.h
testing controller view/: .qmake.stash  Makefile  main.cpp  moc_KalkButton.cpp  moc_controller.cpp  moc_selectTypeButton.cpp  moc_specialized_view.cpp  moc_startup_view.cpp  moc_view_manager.cpp  testing controller view  testing controller view.pro
testing controller view/Controller/: controller.cpp  controller.h
testing controller view/View/: KalkButton.h  startup_view.cpp  startup_view.h  view_manager.cpp  view_manager.h
(+68 files in other folders)
